force-app/main/default/objects/CenarioTeste__c/CenarioTeste__c.object-meta.xml
<CustomObject>
    <label>Cenário de teste</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cenários de teste</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>