force-app/main/default/objects/CenarioTeste__c/fields/CriterioAceite__c.field-meta.xml
<CustomField>
    <fullName>CriterioAceite__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Critério de aceite</label>
    <referenceTo>CriterioAceite__c</referenceTo>
    <relationshipLabel>Critério de aceite</relationshipLabel>
    <relationshipName>CenariosTeste</relationshipName>
    <type>Lookup</type>
</CustomField>