force-app/main/default/objects/CenarioTeste__c/fields/DataExecucao__c.field-meta.xml
<CustomField>
    <fullName>DataExecucao__c</fullName>
    <label>Data de execução</label>
    <type>DateTime</type>
</CustomField>