force-app/main/default/objects/CenarioTeste__c/fields/Evidencias__c.field-meta.xml
<CustomField>
    <fullName>Evidencias__c</fullName>
    <label>Evidências</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>