force-app/main/default/objects/CenarioTeste__c/fields/PreCondicoes__c.field-meta.xml
<CustomField>
    <fullName>PreCondicoes__c</fullName>
    <label>Pré-condições</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>