force-app/main/default/objects/CenarioTeste__c/fields/ResultadoEsperado__c.field-meta.xml
<CustomField>
    <fullName>ResultadoEsperado__c</fullName>
    <label>Resultado esperado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>