force-app/main/default/objects/CenarioTeste__c/fields/ResultadoObtido__c.field-meta.xml
<CustomField>
    <fullName>ResultadoObtido__c</fullName>
    <label>Resultado obtido</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>