force-app/main/default/objects/CenarioTeste__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não iniciado</fullName>
                <default>true</default>
                <label>Não iniciado</label>
            </value>
            <value>
                <fullName>Em execução</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Bloqueado</fullName>
            </value>
            <value>
                <fullName>Não aplicável</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>