force-app/main/default/objects/CenarioTeste__c/validationRules/ValidarCriterioDaWork.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarCriterioDaWork</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(CriterioAceite__c)), CriterioAceite__r.Work__c &lt;&gt; Work__c)</errorConditionFormula>
    <errorDisplayField>CriterioAceite__c</errorDisplayField>
    <errorMessage>O critério de aceite deve pertencer à mesma Work do cenário.</errorMessage>
</ValidationRule>